dev/manifests/3rd-party/cadence/web-deployment.yaml
---
# Source: cadence/templates/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadence-web
  labels:
    app.kubernetes.io/name: cadence
    helm.sh/chart: cadence-0.24.2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: cadence
    app.kubernetes.io/version: 0.24.0
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: cadence
  annotations:
    pia-team.com/role: pia.k8s.cadence/0.5.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cadence
      app.kubernetes.io/instance: cadence
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cadence
        helm.sh/chart: cadence-0.24.2
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: cadence
        app.kubernetes.io/version: 0.24.0
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: cadence
      annotations:
        pia-team.com/app: cadence-web
        pia-team.com/app-logo: cadence-web
        pia-team.com/app-title: Cadence Web
    spec:
      securityContext: {}
      containers:
      - name: cadence-web
        securityContext: {}
        image: "europe-docker.pkg.dev/dnext-io/ghcr-dnext-technology/dnext-technology/3rd-party/ubercadence/web:v3.32.0"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8088
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
      imagePullSecrets:
      - name: reg-creds
  progressDeadlineSeconds: 3600
