dev/manifests/3rd-party/cadence/cadence-network-policy.yml
---
# Source: xxxxx/templates/cadence-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cadence-ingress
  annotations:
    pia-team.com/role: pia.k8s.cadence/0.5.0
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 80
      protocol: TCP
    - port: 8088
      protocol: TCP
    - port: 9090
      protocol: TCP
    - port: 7933
      endPort: 7939
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cadence
  policyTypes:
  - Ingress
---
# Source: xxxxx/templates/cadence-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cadence-egress
  annotations:
    pia-team.com/role: pia.k8s.cadence/0.5.0
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 53
      protocol: UDP
    - port: 80
      protocol: TCP
    - port: 8088
      protocol: TCP
    - port: 9090
      protocol: TCP
    - port: 7933
      endPort: 7939
      protocol: TCP
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cadence
  policyTypes:
  - Egress
